# Sedenion

./: Cargo.toml  README.md  null_state_dgs.py  null_state_gpos.py  null_state_network.py  sdsa_prototype.py  sedenion_crypto.py  setup.py  sqe_kem.py  suov_signature.py  svdf.py  szkpok_proof.py
src/: associator.cu  bindings.cpp  lib.rs  main.rs  sedenion_ops.cpp  stark_vdf.rs
